--- a/config/qtcurveconfigbase.ui
+++ b/config/qtcurveconfigbase.ui
@@ -8,7 +8,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>752</width>
+            <width>754</width>
             <height>504</height>
         </rect>
     </property>
@@ -462,30 +462,6 @@
                             <string>The setting here affects the general appearance - and will be applied to buttons, scrollbars, sliders, combo boxes, and spin buttons.</string>
                         </property>
                     </widget>
-                    <widget class="QLabel" row="0" column="0">
-                        <property name="name">
-                            <cstring>textLabel9</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Appearance:</string>
-                        </property>
-                    </widget>
-                    <widget class="QCheckBox" row="2" column="0" rowspan="1" colspan="2">
-                        <property name="name">
-                            <cstring>fillProgress</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Fill groove</string>
-                        </property>
-                    </widget>
-                    <widget class="QCheckBox" row="1" column="0" rowspan="1" colspan="2">
-                        <property name="name">
-                            <cstring>gradientPbGroove</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Gradient groove</string>
-                        </property>
-                    </widget>
                     <widget class="QComboBox" row="0" column="2">
                         <property name="name">
                             <cstring>stripedProgress</cstring>
@@ -511,12 +487,12 @@
                         </property>
                         <property name="sizeHint">
                             <size>
-                                <width>40</width>
-                                <height>4</height>
+                                <width>194</width>
+                                <height>16</height>
                             </size>
                         </property>
                     </spacer>
-                    <spacer row="3" column="2">
+                    <spacer row="2" column="2">
                         <property name="name">
                             <cstring>spacer16</cstring>
                         </property>
@@ -528,11 +504,45 @@
                         </property>
                         <property name="sizeHint">
                             <size>
-                                <width>7</width>
-                                <height>25</height>
+                                <width>16</width>
+                                <height>369</height>
                             </size>
                         </property>
                     </spacer>
+                    <widget class="QLabel" row="1" column="0">
+                        <property name="name">
+                            <cstring>textLabel1_3</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Groove:</string>
+                        </property>
+                    </widget>
+                    <widget class="QLabel" row="0" column="0">
+                        <property name="name">
+                            <cstring>textLabel9</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Bar:</string>
+                        </property>
+                    </widget>
+                    <widget class="QCheckBox" row="1" column="3">
+                        <property name="name">
+                            <cstring>fillProgress</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Fill</string>
+                        </property>
+                    </widget>
+                    <widget class="QComboBox" row="1" column="1">
+                        <property name="name">
+                            <cstring>progressGrooveAppearance</cstring>
+                        </property>
+                    </widget>
+                    <widget class="QComboBox" row="1" column="2">
+                        <property name="name">
+                            <cstring>progressGrooveColor</cstring>
+                        </property>
+                    </widget>
                 </grid>
             </widget>
             <widget class="QWidget">
@@ -1967,7 +1977,8 @@
     <tabstop>progressAppearance</tabstop>
     <tabstop>stripedProgress</tabstop>
     <tabstop>animatedProgress</tabstop>
-    <tabstop>gradientPbGroove</tabstop>
+    <tabstop>progressGrooveAppearance</tabstop>
+    <tabstop>progressGrooveColor</tabstop>
     <tabstop>fillProgress</tabstop>
     <tabstop>embolden</tabstop>
     <tabstop>defBtnIndicator</tabstop>
