--- a/config/qtcurveconfigbase.ui
+++ b/config/qtcurveconfigbase.ui
@@ -496,23 +496,6 @@ None - no buttons, only the slider</string>
                             <string>Animated</string>
                         </property>
                     </widget>
-                    <spacer row="0" column="4">
-                        <property name="name">
-                            <cstring>spacer15</cstring>
-                        </property>
-                        <property name="orientation">
-                            <enum>Horizontal</enum>
-                        </property>
-                        <property name="sizeType">
-                            <enum>Expanding</enum>
-                        </property>
-                        <property name="sizeHint">
-                            <size>
-                                <width>194</width>
-                                <height>16</height>
-                            </size>
-                        </property>
-                    </spacer>
                     <spacer row="2" column="2">
                         <property name="name">
                             <cstring>spacer16</cstring>
@@ -546,14 +529,6 @@ None - no buttons, only the slider</string>
                             <string>Bar:</string>
                         </property>
                     </widget>
-                    <widget class="QCheckBox" row="1" column="3">
-                        <property name="name">
-                            <cstring>fillProgress</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Fill</string>
-                        </property>
-                    </widget>
                     <widget class="QComboBox" row="1" column="1">
                         <property name="name">
                             <cstring>progressGrooveAppearance</cstring>
@@ -562,6 +537,51 @@ None - no buttons, only the slider</string>
                     <widget class="QComboBox" row="1" column="2">
                         <property name="name">
                             <cstring>progressGrooveColor</cstring>
+                        </property>
+                    </widget>
+                    <spacer row="0" column="5">
+                        <property name="name">
+                            <cstring>spacer15</cstring>
+                        </property>
+                        <property name="orientation">
+                            <enum>Horizontal</enum>
+                        </property>
+                        <property name="sizeType">
+                            <enum>Expanding</enum>
+                        </property>
+                        <property name="sizeHint">
+                            <size>
+                                <width>57</width>
+                                <height>16</height>
+                            </size>
+                        </property>
+                    </spacer>
+                    <spacer row="1" column="3" rowspan="1" colspan="3">
+                        <property name="name">
+                            <cstring>spacer29</cstring>
+                        </property>
+                        <property name="orientation">
+                            <enum>Horizontal</enum>
+                        </property>
+                        <property name="sizeType">
+                            <enum>Expanding</enum>
+                        </property>
+                        <property name="sizeHint">
+                            <size>
+                                <width>300</width>
+                                <height>20</height>
+                            </size>
+                        </property>
+                    </spacer>
+                    <widget class="QCheckBox" row="0" column="4">
+                        <property name="name">
+                            <cstring>fillProgress</cstring>
+                        </property>
+                        <property name="text">
+                            <string>No border</string>
+                        </property>
+                        <property name="whatsThis" stdset="0">
+                            <string>Enable this option to remove the 1 pixel border around the filled element.</string>
                         </property>
                     </widget>
                 </grid>
@@ -1971,6 +1991,8 @@ None - no buttons, only the slider</string>
         </widget>
     </grid>
 </widget>
+<customwidgets>
+</customwidgets>
 <tabstops>
     <tabstop>stackList</tabstop>
     <tabstop>appearance</tabstop>
@@ -1994,9 +2016,9 @@ None - no buttons, only the slider</string>
     <tabstop>progressAppearance</tabstop>
     <tabstop>stripedProgress</tabstop>
     <tabstop>animatedProgress</tabstop>
+    <tabstop>fillProgress</tabstop>
     <tabstop>progressGrooveAppearance</tabstop>
     <tabstop>progressGrooveColor</tabstop>
-    <tabstop>fillProgress</tabstop>
     <tabstop>embolden</tabstop>
     <tabstop>defBtnIndicator</tabstop>
     <tabstop>coloredMouseOver</tabstop>
@@ -2062,7 +2084,6 @@ None - no buttons, only the slider</string>
 </tabstops>
 <layoutdefaults spacing="6" margin="11"/>
 <includehints>
-    <includehint>kpushbutton.h</includehint>
     <includehint>kcolorbutton.h</includehint>
     <includehint>knuminput.h</includehint>
     <includehint>knuminput.h</includehint>
@@ -2070,9 +2091,6 @@ None - no buttons, only the slider</string>
     <includehint>kcolorbutton.h</includehint>
     <includehint>kcolorbutton.h</includehint>
     <includehint>kcolorbutton.h</includehint>
-    <includehint>kpushbutton.h</includehint>
-    <includehint>kpushbutton.h</includehint>
-    <includehint>kpushbutton.h</includehint>
     <includehint>knuminput.h</includehint>
     <includehint>knuminput.h</includehint>
     <includehint>knuminput.h</includehint>
